<resources>
    <string name="app_name">Gmemory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="felicidades">Felicidades</string>
    <string name="tiempoAgotado">Upps.</string>
    <string name="tiempoAgotadoDesc">Tiempo agotado.</string>
    <string name="felicidadesDesc">Se completo el juego</string>
    <string name="comenzar">Comenzar</string>
    <string name="mejorestiempos">Mejores Tiempos</string>
    <string name="facil">Facil</string>
    <string name="medio">Medio</string>
    <string name="alto">Dificil</string>
    <string name="newgame">Nuevo juego</string>
    <string name="game">Jugar</string>
    <string name="niveles">Niveles</string>
    <string name="clicks">Clicks:</string>
    <string name="parejas">Parejas:</string>
    <string name="Ponertiempo">Poner tiempo</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="escojaNivel">Escoja el nivel de dificultad</string>
    <string name="seleccioneT">Seleccione un tiempo en minutos:</string>
    <string name="Escojapersonaje">Escoja personaje</string>
    <string name="home">Inicio</string>

    <string name="facebook_app_id">1176207453175345</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">ad3284600fa99d6535409da1ef69f26f</string>

</resources>